  ``const char *`` as the string is stored beyond the call.

- Issue #2422: When compiled with the ``--with-valgrind`` option, the
  pymalloc allocator will be automatically disabled when running under
  Valgrind.  This gives improved memory leak detection when running
  under Valgrind, while taking advantage of pymalloc at other times.

Library
-------

- The pdb command "source" has been added.  It displays the source
  code for a given object, if possible.

- The pdb command "longlist" has been added.  It displays the whole
  source code for the current function.

- Issue #1503502: Make pdb.Pdb easier to subclass by putting message
  and error output into methods.

- Issue #809887: Make the output of pdb's breakpoint deletions more
  consistent; emit a message when a breakpoint is enabled or disabled.

- Issue #5294: Fix the behavior of pdb's "continue" command when called
  in the top-level debugged frame.

- Issue #5727: Restore the ability to use readline when calling into pdb
  in doctests.

- Issue #6719: In pdb, do not stop somewhere in the encodings machinery
  if the source file to be debugged is in a non-builtin encoding.

- Issue #8048: Prevent doctests from failing when sys.displayhook has
  been reassigned.

- Issue #8015: In pdb, do not crash when an empty line is entered as
  a breakpoint command.

- In pdb, allow giving a line number to the "until" command.

- Issue #1437051: For pdb, allow "continue" and related commands in
  .pdbrc files.  Also, add a command-line option "-c" that runs a
  command as if given in .pdbrc.

- Issue #4179: In pdb, allow "list ." as a command to return to the
  currently debugged line.

- Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
  entries, consider the first one.

- Issue #6630: Allow customizing regex flags when subclassing the
  string.Template class.

- Issue #9411: Allow specifying an encoding for config files in the
  configparser module.
