@@ -475,6 +475,10 @@ C-API
 Library
 -------
 
+- For traceback debugging, the pdb listing now also shows the locations
+  where the exception was originally (re)raised, if it differs from the
+  last line executed (e.g. in case of finally clauses).
+
 - The pdb command "source" has been added.  It displays the source
   code for a given object, if possible.
 
